# bow2605

./: .dockerignore  Dockerfile  quantitative_trading.md
project_navigator/: .gitignore  ANALYSIS.md  README.md  config.py  mcp_server.py  project_navigator.html  pyproject.toml
project_navigator/backend/: __init__.py  app.py  auth.py  database.py  models.py
project_navigator/backend/migrations/: 001_init.sql  002_users_projects.sql  003_expand_item_statuses.sql  004_user_preferences.sql  005_notes_and_timestamps.sql  __init__.py
project_navigator/documentations/: api_reference.md  issues.md  setup.md  user_guide.md
project_navigator/documentations/issues/: 20260629.md
project_navigator/frontend/: index.html  login.html
project_navigator/frontend/css/: header.css  login.css  main.css  sidebar.css
project_navigator/frontend/js/: api.js  app.js  auth.js  i18n.js  projects.js  stages.js  state.js  theme.js
project_navigator/plan_and_design/: 00_overview.md  01_data_model.md  02_api_design.md  03_frontend_architecture.md  04_roadmap.md
project_navigator/requirements/: 20260628_new_feature.md  20260629_issue  20260701_enhancement_for_items.md
project_navigator/scripts/: __init__.py  init_db.py  seed.py
project_navigator/tests/: __init__.py  conftest.py  test_auth.py  test_database.py  test_frontend_imports.py  test_projects.py  test_sidebar.py  test_stages.py
